2006-02-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/automake.texi (Yacc and Lex): Document that `.ypp' and
	`.lpp' file extensions are recognized.

2006-02-21  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (Complete, Extending aclocal, Public macros)
	(Python, Conditionals, API versioning): Always quote macro arguments.
	Report from Stepan Kasal.

2006-02-16  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (Python): More examples.

2006-02-05  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (distcleancheck): Fix bad wording.  Report
	from Bob Rossi.
	(Man pages): Show dist_man_MANS, not EXTRA_DIST = $(man_MANS).

2006-01-29  Alexandre Duret-Lutz  <adl@gnu.org>

	Append $(EXEEXT) to programs that may be listed in TESTS.
	Report from Simon Josefsson.

	* automake.in (%known_programs): New global.
	(initialize_per_input): Reset it.
	(append_exeext): Take a predicate as first argument to select
	the filename to rewrite.
	(handle_programs): Fill %known_programs.
	(handle_tests): Append $(EXEEXT) to all tests that are in
	%known_programs.
	(am_install_var): Update call to append_exeext.
	* doc/automake.texi (EXEEXT): TESTS is also rewritten.
	(Tests): More about the difference between check_PROGRAMS and TESTS.
	Give an example of TEST_ENVIRONMENT.
	* tests/cond32.test: Augment with a nested condition.
	* tests/exeext4.test: Also check TESTS.
	* tests/check5.test: New file.
	* tests/Makefile.am (TESTS): Add check5.test.

2006-01-12  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/install-sh (dstdir): Don't use semicolons inside { } in
	sed scripts, as Posix says it's not portable.
	* lib/missing (file): Likewise.
	* lib/am/distdir.am (distcheck): Likewise.
	* tests/comment7.test, tests/comment9.test, tests/confh.test: Likewise
	* tests/distcom2.test, tests/distcom3.test: Likewise.
	* tests/distcom4.test, tests/distcom5.test: Likewise.
	* tests/distcom6.test, tests/include.test, tests/pluseq8.test: Likewise.
