@@ -1253,12 +1253,8 @@ instance, @option{-Wno-syntax} will hide the warnings about unused
 variables.
 
 The categories output by default are @samp{syntax} and
-@samp{unsupported}.  Additionally, @samp{gnu} is enabled in @option{--gnu} and
-@option{--gnits} strictness.
-
-@samp{portability} warnings are currently disabled by default, but they
-will be enabled in @option{--gnu} and @option{--gnits} strictness in a
-future release.
+@samp{unsupported}.  Additionally, @samp{gnu} and @samp{portability}
+are enabled in @option{--gnu} and @option{--gnits} strictness.
 
 @vindex WARNINGS
 The environment variable @env{WARNINGS} can contain a comma separated
