@@ -1,4 +1,4 @@
-@set UPDATED 21 February 2006
-@set UPDATED-MONTH February 2006
+@set UPDATED 10 March 2006
+@set UPDATED-MONTH March 2006
 @set EDITION 1.9a
 @set VERSION 1.9a
