@@ -93,6 +93,10 @@ New in 1.9a:
     that have been declared as programs in the same Makefile.
     This is mostly useful when some check_PROGRAMS are listed in TESTS.
 
+  - `-Wportability' has finally been turned on by default for `gnu' and
+    `gnits' strictness.  This means automake will complain about %-rules
+    or $(GNU Make functions) unless you switch to `foreign' strictness or
+    use `-Wno-portability'.
 
 New in 1.9:
 
