@@ -1,3 +1,9 @@
+2006-03-10  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* lib/Automake/ChannelDefs.pm: Make -Wportability the default in
+	gnu and gnits modes.
+	* doc/automake.texi (Invoking Automake): Adjust.
+
 2006-02-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* doc/automake.texi (Yacc and Lex): Document that `.ypp' and
